# mem_trainer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config_sample.ini  install_db.sql  main.cpp  vcpkg.json
.github/workflows/: ci.yml
cmake/: FindPostgreSQL.cmake  vcpkg_helpers.cmake
docs/: DB_SCHEMA.md  use_case.puml
include/: DatabaseSync.hpp  MainLoop.hpp  Menu.hpp  RandomGenerators.hpp  RandomValueGenerator.hpp  TaskGenerator.hpp  Value.hpp
src/: DatabaseSync.cpp  MainLoop.cpp  Menu.cpp  RandomGenerators.cpp  RandomValueGenerator.cpp  TaskGenerator.cpp  Value.cpp
